kuber-base/2.3/app/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-23-2
spec:
  selector:
    matchLabels:
      app: app-23-2
  template:
    metadata:
      labels:
        app: app-23-2
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
              name: nginx-port
          volumeMounts:
            - name: configmap
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: configmap
          configMap:
            name: configmap23
            items:
              - key: "index.html"
                path: "index.html"
