kuber-base/2.3/app/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: srv-ingress
spec:
  selector:
    app: app-23-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
