kuber-base/2.3/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: srv-nginx
spec:
  selector:
    app: app-23
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
