kuber-base/2.3/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
    - hosts:
        - microk8s.local
      secretName: nginx-secret
  rules:
    - host: microk8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srv-ingress
                port:
                  number: 80
